Hide protocol handler icon in location bar after user is done interacting with it.

This fixes a regression where the icon lingered after the user pressed
"Done". Luckily this regression only affected the protocol handler icon
and didn't change functionality (the user's choice was still respected).

This also improves on the behavior of said icon by hiding it when the
user dismisses the bubble via other means (e.g. clicking outside the
bubble), so long as they've explicitly interacted with the bubble by changing
the setting.

BUG=629645

Review-Url: https://codereview.chromium.org/2169453003
Cr-Commit-Position: refs/heads/master@{#406857}

Former-commit-id: 094178fd159b1c26e82e7a5fa7f33f28aec10dd1